# vehicle-management-be

./: .gitignore  Cargo.toml
src/: main.rs  model.rs
