[package]
name = "vehicle-management-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.10.1"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
chrono = { version = "0.4.35", features = ["serde"] }
